tests/baselines/reference/downlevelLetConst18(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
downlevelLetConst18.ts(4,14): error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
downlevelLetConst18.ts(8,14): error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== downlevelLetConst18.ts (2 errors) ====
    'use strict'
    
    for (let x; ;) {
        function foo() { x };
                 ~~~
!!! error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
    }
    
    for (let x; ;) {
        function foo1() { x };
                 ~~~~
!!! error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
    }
    
    for (let x; ;) {
        (() => { x })();
    }
    
    for (const x = 1; ;) {
        (() => { x })();
    }
    
    for (let x; ;) {
        ({ foo() { x }})
    }
    
    for (let x; ;) {
        ({ get foo() { return x } })
    }
    
    for (let x; ;) {
        ({ set foo(v) { x } })
    }
    